--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,8 +19,8 @@
   <context-param>
   	<param-name>contextConfigLocation</param-name>
   	<param-value>
-  		/WEB-INF/config/action-service.xml
-  		/WEB-INF/config/action-dataSource.xml
+  		/WEB-INF/action-service.xml
+  		/WEB-INF/action-dataSource.xml
   	</param-value>
   </context-param>
   
